# caap

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KERNEL_REFERENCE.md  LICENSE  MIGRATION.md  NOTICE  README.md  SECURITY.md
.agents/: README.md  conventions.md  manifest.json  sync.py
book/: book.toml
caap/: Cargo.toml
caap-cli/: Cargo.toml
caap-cli/benches/: compile_bench.rs
caap-cli/src/: main.rs
caap-cli/src/commands/: dispatch.rs  mod.rs  output.rs  run.rs  shared.rs
caap-cli/tests/: cli_scenarios.rs  cli_tests.rs  perf_profile.rs
caap-dap/: Cargo.toml
caap-dap/src/: dap_types.rs  lib.rs  main.rs  protocol.rs  stdio_capture.rs  wire.rs  worker.rs
caap-dap/src/controller/: mod.rs  variables.rs
caap-dap/tests/: dap_smoke.rs
caap-lsp/: Cargo.toml
caap-lsp/src/: analyze.rs  doc.rs  format.rs  index.rs  lib.rs  main.rs  semantic_tokens.rs  structure.rs  symbols.rs  vocab.rs
caap-lsp/tests/: analyze_smoke.rs  urun_highlight.rs
caap-sys-runtime/: Cargo.toml  build.rs
caap-sys-runtime-ffi/: Cargo.toml
caap-sys-runtime-ffi/src/: lib.rs
caap-sys-runtime/src/: catalog.rs  ffi.rs  ffi_native.rs  ffi_value.rs  fs.rs  io.rs  lib.rs  net.rs  os.rs  path.rs  proc.rs  rand.rs  time.rs
caap-sys-runtime/tests/: c_abi_boundary.rs
caap/benches/: eval_query_bench.rs
caap/src/: artifacts.rs  bind_args.rs  bridges.rs  cli.rs  compiler.rs  debug.rs  diagnostics.rs  error.rs  eval.rs  frontend.rs  graph.rs  host.rs  ir.rs  language.rs  lib.rs  lsp.rs  runtime_loader.rs  semantic.rs  source.rs  surface_syntax.rs  syntax_authoring.rs  unit.rs  values.rs  workspace.rs
caap/src/artifacts/: cache.rs  defs.rs  mod.rs  source_template.rs
caap/src/builtins/: args.rs  arithmetic.rs  bytes.rs  compiler_graphs.rs  compiler_node_match.rs  compiler_providers.rs  compiler_query.rs  compiler_query_helpers.rs  compiler_query_runtime.rs  compiler_registry.rs  compiler_units.rs  compiler_units_helpers.rs  compiler_units_runtime.rs  control_flow.rs  effects.rs  grammar_builder.rs  host_services.rs  ir_builders.rs  mod.rs  mutable.rs  provider_context.rs  provider_context_helpers.rs  provider_context_runtime.rs  reflect.rs  semantic_projection.rs  sequences.rs  strings.rs  surface.rs  syntax.rs  value_compare.rs
caap/src/builtins/grammar/: engine.rs  mod.rs
caap/src/compiler/: bootstrap.rs  bridge.rs  bridges.rs  eval_service.rs  fact_schema.rs  host.rs  mod.rs  query_provider.rs  query_provider_registry.rs  query_provider_types.rs
caap/src/compiler/query_service/: cache.rs  mod.rs  serde.rs
caap/src/compiler/session/: bootstrap_images.rs  mod.rs  registration.rs  registry.rs  tests.rs  types.rs
caap/src/frontend/: eval.rs  grammar.rs  lower.rs  mod.rs  model.rs  reader.rs  validation.rs
caap/src/host/: fn_fs.rs  fn_io.rs  fn_misc.rs  mod.rs  registry.rs  sys_policy.rs
caap/src/semantic/: graph.rs  mod.rs  policy.rs  symbol.rs  value.rs
caap/src/unit/: core.rs  lifecycle.rs  mod.rs  rewrite.rs  serial.rs
caap/tests/: allocation_budget_tests.rs  bootstrap_session_tests.rs  builtins_doc_bijection_tests.rs  bytes_tests.rs  cli_tests.rs  codegen_invariants_tests.rs  compiler_cache_tests.rs  compiler_services_tests.rs  compiler_session_tests.rs  core_state_tests.rs  ctfe_compiler_builtins_tests.rs  ctfe_ir_builder_tests.rs  ctfe_peg_grammar_tests.rs  ctfe_provider_tests.rs  ctfe_unit_node_builtins_tests.rs  debug_frames_tests.rs  deep_recursion_tests.rs  dual_phase_equivalence_tests.rs  dwarf_debug_tests.rs  eval_budget_tests.rs  eval_tests.rs  grammar_parse_forms_tests.rs  host_system_library_tests.rs  host_system_tests.rs  metadata_retraction_tests.rs  native_meta_tests.rs  numeric_semantics_tests.rs  query_cache_replay_tests.rs  query_effect_tests.rs  query_pipeline_tests.rs  reference_tests.rs  robustness_fuzz_tests.rs  runtime_collection_tests.rs  runtime_language_tests.rs  segmental_reader_tests.rs  spec_span_tests.rs  stdlib_codegen_tests.rs  stdlib_forms_tests.rs  stdlib_governance_tests.rs  stdlib_loader_tests.rs  (+13 more)
caap/tests/common/: mod.rs
docs/: README.md  adr-0001-specialization-budget.md  architecture.md  builtins.md  caap-spec.md  design-bare-metal.md  design-capability-enforcement.md  design-oop.md  design-partial-evaluation.md  kernel-musthave.md  name-first-expression-only-grammar.md  perf-notes.md  principles.md  segmental-reader.md  stdlib-architecture.md  stdlib-reference.md  stdlib-structure-plan.md  testing.md
peg/: Cargo.toml  README.md
peg-derive/: Cargo.toml
peg-derive/src/: lib.rs
peg/benches/: peg_bench.rs
peg/examples/: context_dependent.rs  driver_protocol.rs  editor.rs  grammar_constructs.rs  grammar_mutation.rs  incremental_and_tools.rs  scopes.rs  tokens_and_scanner.rs  tour.rs
peg/fuzz/: Cargo.toml
peg/fuzz/fuzz_targets/: parse_grammar.rs  parse_input.rs
peg/src/: analysis.rs  analysis_rule.rs  ast.rs  ast_diff.rs  behaviors.rs  builder.rs  cache_runtime.rs  cache_transforms.rs  compile.rs  diagnostics.rs  diagnostics_utils.rs  driver.rs  editor.rs  error.rs  expr.rs  grammar.rs  graph_ops.rs  hash.rs  incremental_edits.rs  incremental_refresh.rs  invalid_rules.rs  lib.rs  lru_dict.rs  mutation.rs  nodes.rs  optimize.rs  parse_limits.rs  parser.rs  parser_analysis.rs  parser_compile.rs  parser_diagnostics.rs  parser_engine_diag.rs  parser_engine_state.rs  parser_imports.rs  pipeline.rs  profile.rs  recovery.rs  registry.rs  request.rs  scanner.rs  (+14 more)
peg/src/parser_engine/: matchers.rs  mod.rs
peg/tests/: api.rs  context_sensitive.rs  derive.rs  driver.rs  grammar_analysis.rs  grammar_builder.rs  grammar_constructs.rs  grammar_mutation.rs  grammar_roundtrip.rs  imports_and_params.rs  incremental_ast.rs  invalid_rules.rs  panic_safety.rs  parser_engine.rs  port_advanced_analysis.rs  port_analysis_mutation.rs  port_api.rs  port_invalid_rules.rs  port_new_features.rs  port_new_modules.rs  port_parser_engine.rs  port_registry.rs  registry.rs  semantic_hooks.rs  tokens_and_scanner.rs  value_helpers.rs
scripts/: caap_refactor.py  clean-local-artifacts.sh  native-doctor.sh  (+4 more)
(+653 files in other folders)
