[package]
name = "caap-cli"
version = "0.1.0"
edition = "2021"
description = "CAAP launcher: caap [BOOTSTRAP] PROGRAM [ARG...] — execution is the only operation."
license = "Apache-2.0"

[dependencies]
caap-core = { path = "../caap" }
caap-sys-runtime = { path = "../caap-sys-runtime" }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bin]]
name = "caap"
path = "src/main.rs"

[[bench]]
name = "compile_bench"
harness = false
