[package]
name = "caap-dap"
version = "0.1.0"
edition = "2021"
description = "CAAP compile-time (CTFE) step-through debugger — Debug Adapter Protocol server."
license = "Apache-2.0"

[dependencies]
caap-core = { path = "../caap" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[[bin]]
name = "caap-dap"
path = "src/main.rs"
