[package]
name = "caap-lsp"
version = "0.1.0"
edition = "2021"
description = "CAAP Language Server (LSP) — surface-syntax aware."
license = "Apache-2.0"

[dependencies]
caap-core = { path = "../caap" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "caap-lsp"
path = "src/main.rs"
