[package]
name = "caap-peg-port"
version = "0.1.0"
edition = "2021"
description = "Work-in-progress Rust port of CAAP's PEG module."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.11"
lru = "0.12"

[lib]
name = "caap_peg_port"
path = "src/lib.rs"

[[bench]]
name = "peg_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
